[package]
name = "storage-postgres"
version = "1.7.0"
authors = [
  "Ian Costanzo <ian@anon-solutions.ca>"
]

description = "Postgres storage plug-in for indy sdk wallet."
license = "MIT/Apache-2.0"
build = "build.rs"

[lib]
name = "indystrgpostgres"
path = "src/lib.rs"
crate-type = ["staticlib","rlib","cdylib"]

[features]
default = ["bn_openssl", "ed25519_sign_sodium", "ed25519_box_sodium", "sealedbox_sodium", "base58_rust_base58", "base64_rust_base64", "xsalsa20_sodium", "chacha20poly1305_ietf_sodium", "pair_amcl", "hash_openssl", "local_nodes_pool", "revocation_tests", "pwhash_argon2i13_sodium", "hmacsha256_sodium", "memzero_sodium", "randombytes_sodium"]
bn_openssl = ["openssl", "int_traits"]
ed25519_sign_sodium = ["sodiumoxide"]
ed25519_box_sodium = ["sodiumoxide"]
sealedbox_sodium = ["sodiumoxide"]
base58_rust_base58 = ["rust-base58"]
base64_rust_base64 = ["base64"]
xsalsa20_sodium = ["sodiumoxide"]
chacha20poly1305_ietf_sodium = ["sodiumoxide"]
pwhash_argon2i13_sodium = ["sodiumoxide"]
pair_amcl = ["ursa"]
hash_openssl = ["openssl"]
local_nodes_pool = []
revocation_tests = []
sodium_static = []
hmacsha256_sodium = ["sodiumoxide"]
memzero_sodium = ["sodiumoxide"]
randombytes_sodium = ["sodiumoxide"]

# Causes the build to fail on all warnings
fatal_warnings = []

[dependencies]
#indy = { version="1.6.7", path="../../../wrappers/rust" }
rust-libindy-wrapper = "0.2.13"
ursa = { version = "0.1.1", optional = true }
int_traits = { version = "0.1.1", optional = true }
digest = "0.7.0"
env_logger = "0.5.10"
errno = "0.2.3"
etcommon-rlp = "0.2.3"
generic-array = "0.9.0"
hex = "0.2.0"
libc = "0.2.60"
log = "0.4.1"
dirs = "1.0.4"
openssl = { version = "=0.10.12", optional = true }
owning_ref = "0.3.3"
rand = "0.3"
rust-base58 = {version = "0.0.4", optional = true}
base64 = {version = "0.6.0", optional = true}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sha2 = "0.7.0"
sha3 = "0.7.0"
rmp-serde = "0.13.6"
sodiumoxide = {version = "0.0.16", optional = true}
time = "0.1.36"
zmq = "0.8.2"
lazy_static = "1.3"
named_type = "0.1.3"
named_type_derive = "0.1.3"
byteorder = "1.3.2"
log-panics = "2.0.0"
postgres = "0.15.2"
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"

[dependencies.uuid]
version = "0.5.0"
default-features = false
features = ["v4"]

