[package]
name = "indy-sys"
description = "FFI bindings to Libindy C API"
version = "1.9.0"
authors = ["Mike Lodder <redmike7@gmail.com>"]
build = "build.rs"
links = "indy"
license = "MIT/Apache-2.0"

[dependencies]
libc = "=0.2.41"

[build-dependencies]
pkg-config = "0.3.9"
regex = "1.0.0"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"