[package]
name = "indy-sys"
description = "FFI bindings to Libindy C API"
version = "1.14.1"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
build = "build.rs"
links = "indy"
license = "MIT/Apache-2.0"

[dependencies]
indy-api-types = { path = "../../../libindy/indy-api-types"}
libc = "=0.2.60"

[build-dependencies]
pkg-config = "0.3.9"
regex = "1.0.0"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"
