[package]
name = "rotate-key"
version = "0.1.0"
authors = ["matt raffel <matt.raffel@evernym.com>"]
Desscription = "Demostrates using the Rust Wrapper to rotate a key (did functions)"

[dependencies]
indy = "1.6.7"
lazy_static = "0.2"
log = "0.4.1"
log-panics = "2.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"