[package]
name = "write-did-and-query-verkey"
version = "0.1.0"
authors = ["matt raffel <matt.raffel@evernym.com>"]
description = "Demonstrates using Rust wrapper for LibIndy through creating and retrieving DIDs"

[[bin]]
name = "write-did-and-query-verkey"
path = "src/write-did-and-query-verkey.rs"

[[bin]]
name = "template"
path = "src/template.rs"

[dependencies]
indy = "1.6.7"
lazy_static = "1.3"
log = "0.4.1"
log-panics = "2.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
